fix sponsors stretching in safari

--- a/src/sass/partials/_sponsors.scss
+++ b/src/sass/partials/_sponsors.scss
@@ -285,6 +285,7 @@
 		a {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 
 			&:hover {
 				img{
